--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HCOSC - Himalaya College Open Source Club</title>
+      <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" sizes="200x200" href="/images/logo.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/logo.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/logo.png" />
+
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
