fix minor errors

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 Empowering Future Innovators.
             </h1>
             <p class="hero-subtitle">
-                Himalaya College–Led Open-Source Community for Networking, Knowledge, and Career Growth.
+                Himalaya College–Led Open-Source Community for <br>
+                Networking, Knowledge, and Career Growth.
             </p>
         </div>
     </section>
